removed some trailing whitespace

--- a/index.html
+++ b/index.html
@@ -7,10 +7,24 @@
     </head>
     <body>
         <main>
-
+            <div>
+                <img src="https://placehold.it/960x450/ddd">
+            </div>
+            <div>
+                <img src="https://placehold.it/300x375/ddd">
+            </div>
+            <div>
+                <img src="https://placehold.it/300x375/ddd">
+            </div>
+            <div>
+                <img src="https://placehold.it/300x375/ddd">
+            </div>            
+            <div>
+                <img src="https://placehold.it/480x400/ddd">
+            </div> 
         </main>
     </body>
     <footer>
-        
+
     </footer>
 </html>
