--- a/index.html
+++ b/index.html
@@ -6,8 +6,23 @@
         <title>Wireframe Project</title>
     </head>
     <body>
+        <header>
+            <div id="nav">
+                <div id="logo">
+                    <img src="https://placehold.it/200x70/ddd">
+                </div>
+                <ul id="navitems">
+                    <li>Nav Item 1</li>
+                    <li>Nav Item 2</li>
+                    <li>Nav Item 3</li>
+                    <li>Nav Item 4</li>
+                </ul>
+            </div>
+
+        </header>
         <main>
-            <div>
+
+            <div id="hero">
                 <img src="https://placehold.it/960x450/ddd">
             </div>
             <div>
